fixed my progress with borders, alignment and color

--- a/PersonalWebsite/Home/css/style.css
+++ b/PersonalWebsite/Home/css/style.css
@@ -75,15 +75,26 @@ header
     align-items: center;
     width: 100%;
     padding: 10px 0px 10px 0px;
+    margin-bottom: 10px;
     color:#ffecd1;
     background-color: #001524;
 }
 
-
-.achievements 
+.work-container label
 {
+    color:#ffecd1;
+    background-color: #001524;
+    margin-top: 10px;
+    padding: 5px 10px 5px 5px;
+    border-radius: 0px 10px 10px 0px;
+}
+
+
+.work-container .achievements
+{
+    flex-wrap: wrap;
     align-items: left;
     justify-content: left;
-    margin: 15px;
+    margin: 20px;
     padding-left: 30px;
 }
